examples/test/testpolicy7456.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7456
  namespace: namespace37
spec:
  podSelector:
    matchLabels:
      key45: value30
      key35: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value30
          key10: value40
          key41: value49
      podSelector:
        matchLabels:
          key21: value11
          key30: value42
          key15: value34
